--- a/movie-app/src/main.css
+++ b/movie-app/src/main.css
@@ -29,6 +29,27 @@ body {
   cursor: pointer;
   transition: 0.3s;
 }
+
+.the-loader {
+  width: 30px;
+  height: 30px;
+  margin: 30px auto;
+  border: 4px solid var(--color-primary);
+  border-top-color: transparent;
+  border-radius: 50%;
+  animation: loader 1s infinite linear;
+}
+.the-loader .hide {
+  display: none;
+}
+@keyframes loader {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .btn:hover {
   background-color: var(--color-hover);
 }
@@ -136,4 +157,14 @@ body {
 }
 .movies .movie .info .title {
   color: var(--color-white);
+}
+
+.view-more {
+  width: 100%;
+  max-width: 300px;
+  margin: 20 auto;
+  display: block;
+}
+.hide {
+  display: none;
 }
