--- a/movie-app/src/main.css
+++ b/movie-app/src/main.css
@@ -112,6 +112,11 @@ body {
   border-radius: 4px;
   background-color: var(--color-area);
 }
+.movie-list .message {
+  color: var(--color-primary);
+  font-size: 20px;
+  text-align: center;
+}
 .movie-list .movies {
   display: flex;
   flex-wrap: wrap;
@@ -167,4 +172,41 @@ body {
 }
 .hide {
   display: none;
+}
+
+.the-movie {
+  color: var(--color-white-50);
+  display: flex;
+  gap: 70px;
+}
+.the-movie .poster {
+  flex-shrink: 0;
+  --width: 500px;
+  width: var(--width);
+  height: calc(var(--width) * 3 / 2);
+  border-radius: 10px;
+  background-size: cover;
+  background-color: var(--color-area);
+}
+.the-movie .specs {
+  flex-grow: 1;
+}
+.the-movie .title {
+  font-size: 70px;
+  font-family: "Oswald", "sans-serif";
+  line-height: 1;
+  color: var(--color-white);
+  margin-bottom: 30px;
+}
+.the-movie .labels {
+  color: var(--color-primary);
+  margin-bottom: 20px;
+}
+.the-movie .plot {
+}
+.the-movie h3 {
+  font-family: "Oswald", "sans-serif";
+  font-size: 20px;
+  color: var(--color-white);
+  margin: 24px 0 6px;
 }
