--- a/movie-app/src/main.css
+++ b/movie-app/src/main.css
@@ -39,6 +39,36 @@ body {
   border-radius: 50%;
   animation: loader 1s infinite linear;
 }
+.skeleton {
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  background-color: var(--color-area);
+}
+.skeleton::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(
+    270deg,
+    rgba(225, 225, 225, 0),
+    rgba(225, 225, 225, 0.1),
+    rgba(225, 225, 225, 0)
+  );
+  transform: translateX(-100%);
+  animation: skeleton-loader 2s infinite;
+}
+@keyframes skeleton-loader {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
 .the-loader .hide {
   display: none;
 }
@@ -198,11 +228,21 @@ body {
   color: var(--color-white);
   margin-bottom: 30px;
 }
+.the-movie .title.skeleton {
+  height: 70px;
+}
 .the-movie .labels {
   color: var(--color-primary);
   margin-bottom: 20px;
 }
+.the-movie .labels.skeleton {
+  height: 30px;
+}
 .the-movie .plot {
+}
+.the-movie .plot.skeleton {
+  width: 80%;
+  height: 400px;
 }
 .the-movie h3 {
   font-family: "Oswald", "sans-serif";
