반응형을 위한미디어쿼리 적용

--- a/movie-app/src/main.css
+++ b/movie-app/src/main.css
@@ -96,6 +96,16 @@ body {
   margin: 0 auto;
   padding: 40px 0;
 }
+@media (max-width: 1200px) {
+  .container {
+    padding: 40px;
+  }
+}
+@media (max-width: 600px) {
+  .container {
+    padding: 40px 20px;
+  }
+}
 
 header {
   padding: 20px 40px;
@@ -142,11 +152,25 @@ header .user {
   right: 40px;
   transition: 0.3s;
 }
+header .user img {
+  border-radius: 50%;
+}
 header .user:hover {
   transform: scale(1.2);
 }
 header .user img {
   width: 100%;
+}
+@media (max-width: 600px) {
+  header {
+    padding: 14px 20px;
+  }
+  header nav {
+    display: none;
+  }
+  header .user {
+    right: 20px;
+  }
 }
 
 footer {
@@ -176,7 +200,11 @@ footer a:hover {
 .headline p {
   color: var(--color-white-30);
 }
-
+@media (max-width: 600px) {
+  .headline h1 {
+    font-size: 60px;
+  }
+}
 .search {
   display: flex;
   gap: 10px;
@@ -313,4 +341,52 @@ footer a:hover {
   font-size: 20px;
   color: var(--color-white);
   margin: 24px 0 6px;
+}
+@media (max-width: 1200px) {
+  .the-movie {
+    gap: 30px;
+  }
+  .the-movie .poster {
+    --width: 300px;
+  }
+}
+@media (max-width: 720) {
+  .the-movie {
+    display: block;
+  }
+  .the-movie .title {
+    font-size: 50px;
+    margin-top: 50px;
+  }
+}
+.about .photo {
+  width: 230px;
+  height: 230px;
+  margin: 0 auto 20px;
+  border-radius: 10px;
+  background-size: cover;
+}
+.about .name {
+  font-size: 40px;
+  font-family: "Oswald", "sans-serif";
+  margin-bottom: 20px;
+}
+.about p {
+  line-height: 1.5;
+  text-align: center;
+  margin-bottom: 4px;
+}
+.about a {
+  color: var(--color-primary);
+  text-decoration: none;
+}
+.about a:hover {
+  text-decoration: underline;
+}
+
+.not-found h1 {
+  font-size: 70px;
+  font-weight: 700;
+  color: var(--color-white-10);
+  text-align: center;
 }
